<resources>
    <string name="app_name">NASAING</string>
    <string name="none_found">None found</string>
    <string name="camera_details">Camera Details</string>
    <string name="id">id:</string>
    <string name="name">name:</string>
    <string name="rover_details">Rover Details</string>
    <string name="launch_date">launch date:</string>
    <string name="landing_date">landing date:</string>
    <string name="status">status:</string>
    <string name="full_name">full name:</string>
    <string name="rover_image">rover image</string>
    <string name="no_result_message">No Result! BOO!</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="rover_pix">Rover pix</string>
    <string name="cool_nasa_pic">cool NASA pic</string>
</resources>